# openstack-ansible-specs

./: .gitignore  .gitreview  .zuul.yaml  AUTHORS  ChangeLog  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
specs/: os-ansible-deployment-overview-documentation.rst  standalone-swift.rst  template.rst
specs/antelope/: separated-haproxy-service-config.rst
specs/kilo/: Remove-upstream-repo-dependency.rst  add-plumgrid-neutron-plugin.rst  build-facts-archive.rst  ceph-block-devices.rst  developer-docs.rst  implement-ceilometer.rst  keystone-federation.rst  keystone-sp-adfs-idp.rst  master-kilofication.rst  minimal-kilo.rst  modularize-neutron-plays.rst  multi-region-swift.rst  tunable-openstack-configuration.rst
specs/liberty/: compartementalize-rabbitmq.rst  enable-venv-support-within-the-roles.rst  liberty-release.rst  limit-mysql-config-distribution.rst  modularize-neutron-liberty.rst  named-veths.rst  plumgrid-support-liberty.rst  role-haproxy-v2.rst  upgrade-mariadb-v10.rst
specs/mitaka/: add-support-for-systemd.rst  build-facts-archive.rst  convert-aio-bootstrap-to-ansible.rst  independent-role-repositories.rst  install-guide.rst  ipv6-project-support.rst  irr-apt_package_pinning.rst  irr-galera.rst  irr-lxc_container_create.rst  irr-lxc_host.rst  irr-memcached_server.rst  irr-openstack_hosts.rst  irr-pip_install.rst  irr-pip_lock_down.rst  irr-rabbitmq.rst  irr-repo_server.rst  irr-rsyslog_client.rst  irr-rsyslog_server.rst  irr-utility.rst  lbaasv2.rst  limit-mysql-config-distribution.rst  (+7 more)
tests/: test_titles.py
(+39 files in other folders)
